# snipboard

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sign.sh
.cache/clangd/index/: Folder.h.B8E53F48F3488182.idx  FolderObject.cpp.48D3B82D2A4EDA19.idx  FolderObject.h.0C062D0160AE0B43.idx  FolderTreeModel.cpp.97E69F1986AF383C.idx  FolderTreeModel.h.149A69E14383A353.idx  Snippet.h.50361A09EC7005C9.idx  SnippetListModel.h.F507F8D4CBCDA4B8.idx  SnippetObject.cpp.6A25C940AFE58A61.idx  SnippetObject.h.385383D6E6C55EED.idx  Tag.h.1DED1500B3BB4A78.idx  TagListModel.cpp.F37E37EA052333F9.idx  TagListModel.h.0E9218385152C1CF.idx  TagObject.cpp.0F9583276B968E39.idx  TagObject.h.B1329669CB7A7155.idx
db/: snipboard.sql
src/: main.cpp
src/core/models/: Folder.h  Settings.h  Snippet.h  Tag.h  folder.h  tag.h
src/core/objects/: FolderObject.cpp  FolderObject.h  FolderTreeModel.cpp  FolderTreeModel.h  SnippetListModel.cpp  SnippetListModel.h  SnippetObject.cpp  SnippetObject.h  TagListModel.cpp  TagListModel.h  TagObject.cpp  TagObject.h
src/core/repositories/: FolderRepository.cpp  FolderRepository.h  SnippetRepository.cpp  SnippetRepository.h  SnippetsRepository.cpp  TagRepository.cpp  TagRepository.h
src/core/services/: FolderService.cpp  FolderService.h  SettingsService.cpp  SettingsService.h  SnippetService.cpp  SnippetService.h  TagService.cpp  TagService.h
src/core/utils/: ClipboardHelper.h
src/gui/: Font.qml  Scaling.qml  appSettings.qrc  colors.qml  home.qml  main.qml  main.qml.autosave  mainSettings.qml.autosave  mainsettings.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmldir  settings.qml  settings.qml.autosave  snippetServiceTest.qml  startup.qml
src/gui/Settings/: appearanceSettings.qml  generalSettings.qml  generalSettings.qml.autosave  snippetManagementSettings.qml
src/gui/pages/: colors.qml  delete_overlay.qml  favorites.qml  home.qml  new_snippet.qml  settings.qml
src/gui/theme/: Colors.qml  Scaling.qml
